--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-check-box": "^2.1.7",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^13.9.0"
   },
   "devDependencies": {
