--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-check-box": "^2.1.7",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-safe-area-context": "^4.6.4",
+    "react-native-screens": "^3.22.1",
     "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "^13.9.0"
   },
